examples/test/testpolicy13243.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13243
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key21: value41
      key49: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value18
          key0: value45
          key39: value17
      podSelector:
        matchLabels:
          key21: value42
